Fixed spacing issue

--- a/src/App.css
+++ b/src/App.css
@@ -253,7 +253,7 @@
 
 /*=== Data-checking Styling====*/
 .data-checking {
-  margin-bottom: 10px;
+  margin: 10px 0;
 }
 .data-checking .upload-subheading {
   padding-bottom: 10px;
